# thaifin

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: conda.yml  pypi.yml
conda/: build.sh  meta.yaml
docs/: index.html  thaifin.html
docs/thaifin/: models.html  sources.html  stock.html
docs/thaifin/sources/: finnomena.html  set.html  settrade.html
tests/: test_with_real_server.py
tests/sample_data/: get_financial_sheet.json
thaifin/: __init__.py  finnomena.py  set.py  settrade.py  stock.py
thaifin/sources/: finnomena.py  set.py  settrade.py
