[tool.poetry]
name = "thaifin"
version = "0.2.1"
description = "A Python library for access thai stock fundamental data up to 10+ years."
authors = ["Nutchanon Ninyawee <me@nutchanon.org>"]
license = "ISC"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.1"
requests = "^2.24.0"
lxml = "^4.5.1"
furl = "^2.1.0"
pydantic = "^1.6.1"
arrow = "^0.16.0"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = { version = "^0.12.0", optional = true }
pandas = { version = "^1.0.5", optional = true }
numpy = "^1.19.5"
cachetools = "^4.2.1"
tenacity = "^6.3.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pytest = "^5.4.3"
tqdm = "^4.47.0"
openpyxl = "^3.0.4"
lxml = "^4.5.1"
datamodel-code-generator = "^0.5.30"
pdoc = "^3.0.1"

[tool.poetry.extras]
full = ["python-levenshtein", "pandas"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
